--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!--suppress HtmlUnknownTarget -->
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite App</title>
+
+  <title>when.</title>
+  <meta property="og:site_name" content="when." />
+  <meta property="og:description" content="when. is a website that tells you when tv shows & movies are coming out - to the second." />
 </head>
 <body>
   <div id="app"></div>
