chore: fix eslint, format files

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>when.</title>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>when.</title>
 		<meta property="og:site_name" content="when." />
-		<meta property="og:description" content="when. is a website that tells you when tv shows & movies are coming out - to the second." />
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+		<meta
+			property="og:description"
+			content="when. is a website that tells you when tv shows & movies are coming out - to the second."
+		/>
+	</head>
+	<body>
+		<div id="app"></div>
+		<script type="module" src="/src/main.js"></script>
+	</body>
 </html>
